--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "TollSentryLogin",
   "short_name":"TollSentryLogin",
-  "description": "AutoLoginSentry",
-  "version": "1.0.1",
+  "description": "Automatic click the Login button in Sentry login page",
+  "version": "1.0.2",
   "permissions": [
     "tabs", "https://billy-sentry.skbkontur.ru/"
   ],
