--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "TollSentryLogin",
   "short_name":"TollSentryLogin",
-  "description": "Automatic click the Login button in Sentry login page",
-  "version": "1.0.2",
+  "description": "Автоматический клик на кнопку Login на сайте sentry",
+  "version": "1.0.4",
   "permissions": [
     "tabs", "https://billy-sentry.skbkontur.ru/"
   ],
