--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Автоматический клик на кнопку Login на сайте sentry",
   "version": "1.0.4",
   "permissions": [
-    "tabs", "https://billy-sentry.skbkontur.ru/"
+    "tabs", "https://billy-sentry.skbkontur.ru/", "https://billy-sentry.testkontur.ru/"
   ],
   "browser_action": {
       "default_title": "AutoLoginSentry",
