--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "TollSentryLogin",
   "short_name":"TollSentryLogin",
-  "description": "Автоматический клик на кнопку Login на сайте sentry",
-  "version": "1.0.5",
+  "description": "Автоматический клик на кнопку Login на сайте sentry, jhub.skbkontur",
+  "version": "1.0.6",
   "permissions": [
-    "tabs", "https://billy-sentry.skbkontur.ru/", "https://billy-sentry.testkontur.ru/"
+    "tabs", "https://billy-sentry.skbkontur.ru/", "https://billy-sentry.testkontur.ru/", "https://jhub.skbkontur.ru/"
   ],
   "browser_action": {
       "default_title": "AutoLoginSentry",
